--- a/src/test/java/resources/application-test.properties
+++ b/src/test/java/resources/application-test.properties
@@ -1,6 +1,9 @@
-# Test database configuration (H2 in-memory)
+# H2 Database Configuration for Tests
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Automatically create and drop the schema for each test run
 spring.jpa.hibernate.ddl-auto=create-drop
