--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,59 @@
+version: '3.8'
+
 services:
+  # PostgreSQL Database Service
+  postgres:
+    image: postgres:17.6-alpine
+    container_name: smartdine-postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: smartDine
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: mV00R152
+      PGDATA: /var/lib/postgresql/data/pgdata
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d smartDine"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    networks:
+      - smartdine-network
+
+  # Spring Boot Application Service
+  springboot-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: smartdine-backend
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_APPLICATION_NAME: smartDine
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/smartDine
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: mV00R152
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_SHOW_SQL: "true"
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.PostgreSQLDialect
+      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: "true"
+      SECURITY_JWT_SECRET_KEY: 404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970
+      SECURITY_JWT_EXPIRATION_TIME: 3600000
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - smartdine-network
+
+volumes:
+  postgres-data:
+    driver: local
+
+networks:
+  smartdine-network:
+    driver: bridge
