ssl configured correctly

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,11 @@
 # Production Configuration
-server.port=8080
+# HTTPS Configuration
+server.port=8443
 server.address=0.0.0.0
+
+# HTTP to HTTPS redirect (optional but recommended)
+# Uncomment the following lines if you want to keep HTTP on 8080 and redirect to HTTPS
+# server.http.port=8080
 
 # Application name
 spring.application.name=smartDine
@@ -35,3 +40,18 @@ security.jwt.expiration-time=${SECURITY_JWT_EXPIRATION_TIME:3600000}
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
+
+# SSL configuration
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=/app/keystore/smartdine.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:mV00R152}
+# The alias mapped to the certificate
+server.ssl.key-alias=smartdine
+
+# SSL protocol configuration
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
