--- a/compose.yaml
+++ b/compose.yaml
@@ -40,7 +40,7 @@ services:
       - "${APP_HTTPS_PORT:-8443}:8443"  # HTTPS port
     environment:
       SPRING_APPLICATION_NAME: ${SPRING_APPLICATION_NAME:-smartDine}
-      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL:-jdbc:postgresql://postgres:5432/${POSTGRES_DB:-smartDine}}
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/smartDine
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME:-postgres}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD:-mV00R152}
       SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO:-update}
