--- a/compose.yaml
+++ b/compose.yaml
@@ -56,7 +56,7 @@ services:
     networks:
       - smartdine-network
     healthcheck:
-      test: ["CMD", "wget", "--no-check-certificate", "-q", "--spider", "https://localhost:8443/actuator/health"]
+      test: ["CMD", "curl", "-f", "-k", "https://localhost:8443/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
