--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,14 +1,13 @@
 # Production Configuration
-# HTTPS Configuration
+# HTTPS Configuration (primary port)
 server.port=8443
 server.address=0.0.0.0
 
-# HTTP to HTTPS redirect (optional but recommended)
-# Uncomment the following lines if you want to keep HTTP on 8080 and redirect to HTTPS
-# server.http.port=8080
-
 # Application name
 spring.application.name=smartDine
+
+# Active profile
+spring.profiles.active=prod
 
 # Database configuration (overridden by environment variables in Docker)
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/smartDine}
