--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,14 +40,11 @@ management.endpoint.health.show-details=when-authorized
 # SSL configuration
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.enabled=true
-server.ssl.key-store-type=PKCS12
-# The path to the keystore containing the certificate
-server.ssl.key-store=/app/keystore/smartdine.p12
-# The password used to generate the certificate
-server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:mV00R152}
-# The alias mapped to the certificate
-server.ssl.key-alias=smartdine
 
-# SSL protocol configuration
+server.ssl.key-store=/etc/letsencrypt/live/smartdine-service.switzerlandnorth.cloudapp.azure.com/keystore.p12
+server.ssl.key-store-password=mV00R152
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=springboot
+
 server.ssl.protocol=TLS
 server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
