feat: Implement S3 image upload and retrieval functionality
- Added flow diagrams for image upload and retrieval sequences.
- Updated `pom.xml` to include AWS S3 SDK and JAXB dependencies.
- Created `S3Config` class for AWS S3 configuration.
- Enhanced `SecurityConfig` to allow access to available tables endpoint.
- Developed `ImageController` for handling image uploads and retrievals.
- Introduced `UploadResponse` DTO for upload responses.
- Implemented `S3Service` for S3 interactions including file upload and metadata retrieval.
- Added global exception handling for IO and HTTP method not supported exceptions.
- Updated `UserProfileController` to align with new API structure.
- Added validation annotations to `DishDTO` and `DrinkDTO`.
- Created unit tests for `S3Service` to ensure functionality and reliability.
- Configured AWS S3 properties in application properties files.
- Included test access keys for local testing.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -37,6 +37,12 @@ security.jwt.expiration-time=${SECURITY_JWT_EXPIRATION_TIME:3600000}
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 
+# AWS S3 Configuration
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretKey=${AWS_SECRET_ACCESS_KEY}
+aws.region=${AWS_REGION:us-east-1}
+aws.s3.bucket=${AWS_S3_BUCKET:smartdine-s3-bucket}
+
 # SSL configuration
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.enabled=true
