--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+        	<groupId>me.paulschwarz</groupId>
+        	<artifactId>spring-dotenv</artifactId>
+        	<version>4.0.0</version>
+    	</dependency>
 		<!-- AWS S3 SDK -->
 		<dependency>
    			<groupId>com.amazonaws</groupId>
