--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,9 +6,14 @@ spring.datasource.password=
 
 # JPA configuration - recreate database on each test run
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=false
+
+# Disable PostgreSQL specific properties
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=false
 
 # H2 Console for debugging (optional)
 spring.h2.console.enabled=true
